--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:site_name" content="KiwiLabs AI">
+    <meta property="og:title" content=" KiwiLabs - Create Custom AI Models for Your Business at Unbeatable Prices">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Transform your business with personalized AI models and agents.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AI-generated website" />
     <meta name="theme-color" content="#ffffff" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="robots" content="index, follow" />
@@ -387,6 +390,36 @@
         console.log('Connection lost');
       });
     </script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+     <script type="text/javascript">
+        (function() {
+            // https://dashboard.emailjs.com/admin/account
+            emailjs.init({
+              publicKey: "LcWBWtW8FQO2ISdhn",
+            });
+        })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('submit', function(e) {
+                event.preventDefault();
+              const data = {
+                name: document.getElementById('name').value,
+                email: document.getElementById('email').value,
+                company: document.getElementById('company').value,
+                message: document.getElementById('message').value,
+              };
+                emailjs.send('service_huowdss', 'template_ewoyjn7', data)
+                    .then(() => {
+                        console.log('SUCCESS!',data);
+                    }, (error) => {
+                        console.log('FAILED...', error);
+                    });
+            });
+        }
+    </script>
+
   </head>
   <body class="antialiased text-gray-800 min-h-screen flex flex-col">
     <!-- Skip to main content link for accessibility -->
@@ -425,7 +458,7 @@
               >Home</a
             >
             <a
-              href="#features"
+              href="#services"
               class="hover:text-green-400 transition-colors duration-300"
               >Services</a
             >
@@ -901,7 +934,7 @@
              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-function"><rect width="18" height="18" x="3" y="3" rx="2" ry="2"/><path d="M9 17c2 0 2.8-1 2.8-2.8V10c0-2 1-3.3 3.2-3"/><path d="M9 11.2h5.7"/></svg>
             </div>
             <h3 class="text-2xl font-bold text-gray-800 mb-4">
-              Automates Repetitive Tasks
+              Automated Repetitive Tasks
             </h3>
             <p class="text-gray-600 mb-4">
               AI automates routine processes, increasing efficiency, reducing errors, and freeing up time for strategic activities
@@ -1717,32 +1750,6 @@
                 <div class="space-y-6">
                   <div class="flex items-center">
                     <div
-                      class="w-12 h-12 bg-green-500 rounded-lg flex items-center justify-center"
-                    >
-                      <svg
-                        class="w-6 h-6 text-white"
-                        fill="none"
-                        stroke="currentColor"
-                        viewBox="0 0 24 24"
-                      >
-                        <path
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          stroke-width="2"
-                          d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
-                        />
-                      </svg>
-                    </div>
-                    <div class="ml-4">
-                      <p class="text-gray-600">Phone</p>
-                      <p class="text-gray-800 font-semibold">
-                        +1 (555) 123-4567
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="flex items-center">
-                    <div
                       class="w-12 h-12 bg-blue-500 rounded-lg flex items-center justify-center"
                     >
                       <svg
@@ -1762,7 +1769,7 @@
                     <div class="ml-4">
                       <p class="text-gray-600">Email</p>
                       <p class="text-gray-800 font-semibold">
-                        contact@kiwilabs.ai
+                        contact@kiwilabs.tech
                       </p>
                     </div>
                   </div>
@@ -1806,7 +1813,7 @@
             <div
               class="bg-white p-8 rounded-2xl shadow-lg animate__animated animate__fadeInRight"
             >
-              <form class="space-y-6">
+              <form id="contact-form" class="space-y-6">
                 <div>
                   <label
                     class="block text-gray-700 text-sm font-semibold mb-2"
