--- a/index.html
+++ b/index.html
@@ -1392,43 +1392,33 @@
 
         <div class="grid md:grid-cols-3 gap-8">
           <!-- Portfolio Item 1 -->
-          <div
+          <a
+          href="./personalised-education-ai.html"
             class="bg-gray-50 rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 animate__animated animate__fadeInUp"
           >
             <div class="p-6 space-y-4">
               <div
                 class="bg-blue-500 w-12 h-12 rounded-lg flex items-center justify-center mb-4"
               >
-                <svg
-                  class="w-6 h-6 text-white"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"
-                  />
-                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-graduation-cap"><path d="M21.42 10.922a1 1 0 0 0-.019-1.838L12.83 5.18a2 2 0 0 0-1.66 0L2.6 9.08a1 1 0 0 0 0 1.832l8.57 3.908a2 2 0 0 0 1.66 0z"/><path d="M22 10v6"/><path d="M6 12.5V16a6 3 0 0 0 12 0v-3.5"/></svg>
               </div>
               <h3 class="text-xl font-bold text-gray-800">
-                Document Processing AI
+                Personalized Education AI
               </h3>
               <p class="text-gray-600">
-                Automated document processing system reducing manual work by 80%
+                Adaptive learning algorithms combined with NLP-powered tutoring agents.
               </p>
               <div class="space-y-2">
-                <p class="text-sm text-gray-500">Industry: Finance</p>
-                <p class="text-sm text-gray-500">Timeline: 2 weeks</p>
-                <p class="text-sm text-gray-500">Cost Reduction: 60%</p>
+                <p class="text-sm text-gray-500">Improved student engagement</p>
+                <p class="text-sm text-gray-500">Higher academic performance</p>
+                <p class="text-sm text-gray-500">Increased teacher efficiency</p>
               </div>
             </div>
-          </div>
+          </a>
 
           <!-- Portfolio Item 2 -->
-          <div
+          <a
+          href="./ai-enhanced-marketing.html"
             class="bg-gray-50 rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 animate__animated animate__fadeInUp"
             style="animation-delay: 0.2s"
           >
@@ -1436,34 +1426,21 @@
               <div
                 class="bg-green-500 w-12 h-12 rounded-lg flex items-center justify-center mb-4"
               >
-                <svg
-                  class="w-6 h-6 text-white"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z"
-                  />
-                </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-speech"><path d="M8.8 20v-4.1l1.9.2a2.3 2.3 0 0 0 2.164-2.1V8.3A5.37 5.37 0 0 0 2 8.25c0 2.8.656 3.054 1 4.55a5.77 5.77 0 0 1 .029 2.758L2 20"/><path d="M19.8 17.8a7.5 7.5 0 0 0 .003-10.603"/><path d="M17 15a3.5 3.5 0 0 0-.025-4.975"/></svg>
               </div>
               <h3 class="text-xl font-bold text-gray-800">
-                Customer Service AI Agent
+             AI-Enhanced Marketing Campaigns
               </h3>
               <p class="text-gray-600">
-                24/7 automated customer support system with 95% satisfaction
-                rate
+                Recommendation algorithms and Predictive analytics for personalized marketing
               </p>
               <div class="space-y-2">
-                <p class="text-sm text-gray-500">Industry: Retail</p>
-                <p class="text-sm text-gray-500">Timeline: 3 weeks</p>
-                <p class="text-sm text-gray-500">Cost Reduction: 50%</p>
+                <p class="text-sm text-gray-500">Increased sales</p>
+                <p class="text-sm text-gray-500">Higher customer engagement</p>
+                <p class="text-sm text-gray-500">Improved ROI on marketing efforts</p>
               </div>
             </div>
-          </div>
+          </a>
 
           <!-- Portfolio Item 3 -->
           <div
@@ -1503,7 +1480,7 @@
           </div>
         </div>
 
-        <div class="mt-16 text-center">
+        <!-- <div class="mt-16 text-center">
           <a
             href="#"
             class="inline-flex items-center space-x-2 bg-gray-900 text-white px-8 py-4 rounded-full hover:bg-gray-800 transition-colors duration-300 animate__animated animate__pulse animate__infinite"
@@ -1523,7 +1500,7 @@
               />
             </svg>
           </a>
-        </div>
+        </div> -->
 
         <div
           class="mt-20 bg-gray-50 rounded-2xl p-8 animate__animated animate__fadeIn"
