Update case study titles and descriptions; add new Project Management AI case study

--- a/index.html
+++ b/index.html
@@ -1443,7 +1443,8 @@
           </a>
 
           <!-- Portfolio Item 3 -->
-          <div
+          <a
+            href="./supply-chain-management.html"
             class="bg-gray-50 rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 animate__animated animate__fadeInUp"
             style="animation-delay: 0.4s"
           >
@@ -1451,38 +1452,26 @@
               <div
                 class="bg-purple-500 w-12 h-12 rounded-lg flex items-center justify-center mb-4"
               >
-                <svg
-                  class="w-6 h-6 text-white"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
-                  />
-                </svg>
+               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-container"><path d="M22 7.7c0-.6-.4-1.2-.8-1.5l-6.3-3.9a1.72 1.72 0 0 0-1.7 0l-10.3 6c-.5.2-.9.8-.9 1.4v6.6c0 .5.4 1.2.8 1.5l6.3 3.9a1.72 1.72 0 0 0 1.7 0l10.3-6c.5-.3.9-1 .9-1.5Z"/><path d="M10 21.9V14L2.1 9.1"/><path d="m10 14 11.9-6.9"/><path d="M14 19.8v-8.1"/><path d="M18 17.5V9.4"/></svg>
               </div>
               <h3 class="text-xl font-bold text-gray-800">
-                Predictive Analytics Model
+                Supply Chain Management AI
               </h3>
               <p class="text-gray-600">
-                Sales forecasting system with 92% accuracy
+                AI-driven demand forecasting, predictive maintenance for equipment, and smart inventory management.
               </p>
               <div class="space-y-2">
-                <p class="text-sm text-gray-500">Industry: E-commerce</p>
-                <p class="text-sm text-gray-500">Timeline: 4 weeks</p>
-                <p class="text-sm text-gray-500">ROI: 300%</p>
+                <p class="text-sm text-gray-500">Reduced Operational Costs</p>
+                <p class="text-sm text-gray-500">Minimized Downtime</p>
+                <p class="text-sm text-gray-500">Improved Inventory Efficiency</p>
               </div>
             </div>
-          </div>
+          </a>
         </div>
 
-        <!-- <div class="mt-16 text-center">
+        <div class="mt-16 text-center">
           <a
-            href="#"
+            href="./view-more.html"
             class="inline-flex items-center space-x-2 bg-gray-900 text-white px-8 py-4 rounded-full hover:bg-gray-800 transition-colors duration-300 animate__animated animate__pulse animate__infinite"
           >
             <span>View More Case Studies</span>
@@ -1500,7 +1489,7 @@
               />
             </svg>
           </a>
-        </div> -->
+        </div>
 
         <div
           class="mt-20 bg-gray-50 rounded-2xl p-8 animate__animated animate__fadeIn"
