--- a/view-more.html
+++ b/view-more.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI-Enhanced Marketing Campaigns - Case Study</title>
+    <title>Project Management AI - Case Study</title>
     <style>
       /* Modern CSS Reset */
       * {
@@ -35,8 +35,7 @@
       .nav a {
         color: rgba(0, 0, 0, 0.54);
         text-decoration: none;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
         font-size: 0.9rem;
         transition: color 0.2s ease;
       }
@@ -50,8 +49,7 @@
         max-width: 680px;
         margin: 7rem auto 3rem;
         padding: 0 1.5rem;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
         color: rgba(0, 0, 0, 0.54);
         font-size: 0.9rem;
       }
@@ -108,8 +106,7 @@
 
       .metric p {
         color: rgba(0, 0, 0, 0.54);
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
         font-size: 0.9rem;
       }
 
@@ -185,32 +182,29 @@
   </head>
   <body>
     <nav class="nav">
-      <a href="index.html">← Back to Portfolio</a>
+      <a href="index.html">&larr; Back to Portfolio</a>
     </nav>
 
     <div class="article-meta"></div>
 
     <article>
       <header class="hero">
-        <h1>AI-Enhanced Marketing Campaigns</h1>
-        <p>
-          Recommendation algorithms and Predictive analytics for personalized
-          marketing.
-        </p>
+        <h1>Project Management AI</h1>
+        <p>AI-driven project scheduling, team collaboration, and resource allocation forecasting</p>
       </header>
 
       <div class="metrics-grid">
         <div class="metric">
-          <h3>68.5%</h3>
-          <p>Reduction in Manual Work</p>
+          <h3>20%</h3>
+          <p>Improvement in On-Time Project Completion</p>
         </div>
         <div class="metric">
-          <h3>48.9%</h3>
-          <p>Cost Reduction</p>
+          <h3>25%</h3>
+          <p>Increase in Resource Utilization</p>
         </div>
         <div class="metric">
-          <h3>4</h3>
-          <p>Weeks Implementation</p>
+          <h3>15%</h3>
+          <p>Boost in Team Productivity</p>
         </div>
       </div>
 
@@ -218,60 +212,49 @@
         <section class="content-section">
           <h2>Scenario</h2>
           <p>
-            A retail brand wanted to improve its marketing efforts by delivering
-            more personalized advertisements to its customers. The company
-            needed a way to analyze customer data and create targeted marketing
-            strategies based on individual preferences.
+            A consulting firm was struggling with project delays and inefficient resource
+            management. They needed a way to better allocate resources, optimize project
+            timelines, and improve team collaboration across different departments.
           </p>
         </section>
 
         <section class="content-section">
           <h2>Application</h2>
+          We implemented AI-driven project scheduling, team collaboration optimization, and resource allocation forecasting.
           <ul>
             <li>
-              <b>Personalized Marketing Campaigns:</b> We developed an AI-driven
-              recommendation engine that analyzes customer behavior (e.g.,
-              browsing history, purchase patterns) to create tailored marketing
-              content. The system was integrated with their email and social
-              media platforms to send personalized offers and advertisements to
-              specific customer segments.
+              <b>AI-Driven Project Scheduling:</b> AI algorithms were used to optimize project
+              timelines, predict delays, and allocate resources efficiently based on availability
+              and expertise. The system considered past project data, team skills, and external
+              factors to propose the best possible schedules.
             </li>
             <li>
-              <b>Virtual Tutoring:</b> We implemented an NLP-based tutoring
-              assistant powered by GPT-3, which engages students in
-              subject-specific dialogues. This AI agent provides real-time help
-              on various topics, answering questions, clarifying concepts, and
-              offering personalized practice exercises based on each student’s
-              responses.
+              <b>Team Collaboration Optimization:</b> AI tools monitored team collaboration patterns
+              through communication platforms, identifying bottlenecks or areas where certain
+              individuals were overwhelmed. This allowed managers to redistribute tasks or offer
+              support where needed.
+            </li>
+            <li>
+              <b>Resource Allocation Forecasting:</b> AI analyzed historical project data to predict
+              resource requirements for upcoming projects. It helped the firm avoid overbooking
+              team members or underutilizing talent, leading to smoother project execution.
             </li>
           </ul>
         </section>
 
         <section class="content-section">
-          <h2>Case Example:</h2>
-          <p>
-            The retail brand noticed a significant increase in engagement when
-            they used AI to recommend personalized promotions. For example,
-            customers who purchased winter jackets received personalized
-            discounts for complementary products like scarves and gloves, which
-            led to higher conversion rates.
-          </p>
-        </section>
-
-        <section class="content-section">
           <h2>The Results</h2>
-
           <ul>
             <li>
-              <b>Increased sales </b> from more effective, targeted campaigns.
+              <b>On-Time Project Completion:</b> Project completion times improved by 20%, as AI
+              helped avoid common delays and inefficiencies.
             </li>
             <li>
-              <b>Higher customer engagement </b>, due to personalized content
-              that resonated with individual preferences.
+              <b>Better Resource Utilization:</b> Resource utilization rates increased by 25%,
+              optimizing team output without overburdening individual members.
             </li>
             <li>
-              <b>Improved ROI on marketing efforts</b>, with the company seeing
-              a significant boost in customer retention.
+              <b>Improved Collaboration:</b> AI-enhanced collaboration tools increased team productivity by 15% through better task management and communication.
             </li>
           </ul>
         </section>
