--- a/personalised-education-ai.html
+++ b/personalised-education-ai.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document Processing AI - Case Study</title>
+    <title>Personalized Education AI - Case Study</title>
     <style>
       /* Modern CSS Reset */
       * {
