--- a/supply-chain-management.html
+++ b/supply-chain-management.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI-Enhanced Marketing Campaigns - Case Study</title>
+    <title>Supply Chain Management AI - Case Study</title>
     <style>
       /* Modern CSS Reset */
       * {
@@ -192,24 +192,24 @@
 
     <article>
       <header class="hero">
-        <h1>AI-Enhanced Marketing Campaigns</h1>
+        <h1>Supply Chain Management AI</h1>
         <p>
-          Recommendation algorithms and Predictive analytics for personalized
-          marketing.
+          AI-driven demand forecasting, predictive maintenance for equipment,
+          and smart inventory management
         </p>
       </header>
 
       <div class="metrics-grid">
         <div class="metric">
-          <h3>68.5%</h3>
+          <h3>52.57%</h3>
           <p>Reduction in Manual Work</p>
         </div>
         <div class="metric">
-          <h3>48.9%</h3>
+          <h3>38.7%</h3>
           <p>Cost Reduction</p>
         </div>
         <div class="metric">
-          <h3>4</h3>
+          <h3>2</h3>
           <p>Weeks Implementation</p>
         </div>
       </div>
@@ -218,44 +218,39 @@
         <section class="content-section">
           <h2>Scenario</h2>
           <p>
-            A retail brand wanted to improve its marketing efforts by delivering
-            more personalized advertisements to its customers. The company
-            needed a way to analyze customer data and create targeted marketing
-            strategies based on individual preferences.
+            A global manufacturing company was struggling with supply chain
+            inefficiencies, high transportation costs, and inconsistent
+            inventory levels. They needed a solution to better forecast demand,
+            optimize deliveries, and reduce stockouts or overstock situations.
           </p>
         </section>
 
         <section class="content-section">
           <h2>Application</h2>
+          We implemented AI-driven demand forecasting, predictive maintenance
+          for equipment, and smart inventory management.
           <ul>
             <li>
-              <b>Personalized Marketing Campaigns:</b> We developed an AI-driven
-              recommendation engine that analyzes customer behavior (e.g.,
-              browsing history, purchase patterns) to create tailored marketing
-              content. The system was integrated with their email and social
-              media platforms to send personalized offers and advertisements to
-              specific customer segments.
+              <b>AI-Driven Demand Forecasting:</b> AI analyzed historical sales
+              data, seasonal trends, and external factors (such as weather and
+              market conditions) to predict demand for each product. This
+              allowed the company to better allocate resources and reduce
+              inventory holding costs by ensuring optimal stock levels.
             </li>
             <li>
-              <b>Virtual Tutoring:</b> We implemented an NLP-based tutoring
-              assistant powered by GPT-3, which engages students in
-              subject-specific dialogues. This AI agent provides real-time help
-              on various topics, answering questions, clarifying concepts, and
-              offering personalized practice exercises based on each student’s
-              responses.
+              <b>Predictive Maintenance for Equipment:</b>AI-powered sensors
+              were deployed across key machinery in the supply chain. Predictive
+              analytics allowed the company to detect signs of wear or
+              malfunction early, minimizing downtime and preventing costly
+              repairs.
+            </li>
+            <li>
+              <b>Smart Inventory Management:</b>AI systems monitored inventory
+              in real-time, providing recommendations on restocking, warehouse
+              space optimization, and reducing waste. It also helped track
+              shipments, ensuring timely deliveries without excess inventory.
             </li>
           </ul>
-        </section>
-
-        <section class="content-section">
-          <h2>Case Example:</h2>
-          <p>
-            The retail brand noticed a significant increase in engagement when
-            they used AI to recommend personalized promotions. For example,
-            customers who purchased winter jackets received personalized
-            discounts for complementary products like scarves and gloves, which
-            led to higher conversion rates.
-          </p>
         </section>
 
         <section class="content-section">
@@ -263,15 +258,13 @@
 
           <ul>
             <li>
-              <b>Increased sales </b> from more effective, targeted campaigns.
+              <b>Reduced Operational Costs:</b> Supply chain costs decreased by 15% as AI-powered forecasting led to better resource allocation.
             </li>
             <li>
-              <b>Higher customer engagement </b>, due to personalized content
-              that resonated with individual preferences.
+              <b>Minimized Downtime: </b> Predictive maintenance reduced equipment downtime by 20%, leading to smoother operations.
             </li>
             <li>
-              <b>Improved ROI on marketing efforts</b>, with the company seeing
-              a significant boost in customer retention.
+              <b>Improved Inventory Efficiency:</b> Overstock and stockout situations were reduced by 30%, optimizing storage costs and improving product availability.
             </li>
           </ul>
         </section>
