--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@
               };
                 emailjs.send('service_huowdss', 'template_ewoyjn7', data)
                     .then(() => {
+                      alert('Your message has been sent successfully!');
                         console.log('SUCCESS!',data);
                     }, (error) => {
                         console.log('FAILED...', error);
@@ -579,7 +580,7 @@
                 Get Started Now
               </a>
               <a
-                href="#contact"
+                href="#portfolio"
                 class="border border-white text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-white hover:text-gray-900 transition-colors duration-300 text-center"
               >
                 View Demo Models
