Update training and marketing sections with new descriptions and add "View More" buttons for additional information

--- a/index.html
+++ b/index.html
@@ -1097,21 +1097,7 @@
                   processes and requirements.
                 </p>
                 <ul class="space-y-2">
-                  <li class="flex items-center text-gray-600">
-                    <svg
-                      class="w-4 h-4 text-green-500 mr-2"
-                      fill="currentColor"
-                      viewBox="0 0 20 20"
-                    >
-                      <path
-                        fill-rule="evenodd"
-                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
-                        clip-rule="evenodd"
-                      />
-                    </svg>
-                    Starting at just $499
-                  </li>
-                  <li class="flex items-center text-gray-600">
+                   <li class="flex items-center text-gray-600">
                     <svg
                       class="w-4 h-4 text-green-500 mr-2"
                       fill="currentColor"
@@ -1125,6 +1111,21 @@
                     </svg>
                     Personalized training
                   </li>
+                  <li class="flex items-center text-gray-600">
+                    <svg
+                      class="w-4 h-4 text-green-500 mr-2"
+                      fill="currentColor"
+                      viewBox="0 0 20 20"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      />
+                    </svg>
+                    Seamless integration with your workflows
+                  </li>
+                 
                   <li class="flex items-center text-gray-600">
                     <svg
                       class="w-4 h-4 text-green-500 mr-2"
@@ -1414,6 +1415,14 @@
                 <p class="text-sm text-gray-500">Higher academic performance</p>
                 <p class="text-sm text-gray-500">Increased teacher efficiency</p>
               </div>
+               <div class="pt-4">
+                <button
+                  onclick="window.location.href = './personalised-education-ai.html'"
+                  class="text-blue-500 font-bold underline hover:text-blue-700 transition-colors"
+                >
+                  View More
+                </button>
+              </div>
             </div>
           </a>
 
@@ -1440,6 +1449,14 @@
                 <p class="text-sm text-gray-500">Higher customer engagement</p>
                 <p class="text-sm text-gray-500">Improved ROI on marketing efforts</p>
               </div>
+              <div class="pt-4">
+                <button
+                  onclick="window.location.href = './ai-enhanced-marketing.html'"
+                  class="text-blue-500 font-bold underline hover:text-blue-700 transition-colors"
+                >
+                  View More
+                </button>
+              </div>
             </div>
           </a>
 
@@ -1465,6 +1482,14 @@
                 <p class="text-sm text-gray-500">Reduced Operational Costs</p>
                 <p class="text-sm text-gray-500">Minimized Downtime</p>
                 <p class="text-sm text-gray-500">Improved Inventory Efficiency</p>
+              </div>
+              <div class="pt-4">
+                <button
+                  onclick="window.location.href = './supply-chain-management.html'"
+                  class="text-blue-500 font-bold underline hover:text-blue-700 transition-colors"
+                >
+                  View More
+                </button>
               </div>
             </div>
           </a>
