Update branding from KiwiLabs to Recruizo across HTML files

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,7 +17,7 @@
         privacy and is committed to protecting the personal information you
         share with us. This Privacy Policy outlines how we collect, use, and
         protect your personal data when you visit our website
-        <a href="https://www.kiwilabs.tech">www.kiwilabs.tech</a> ("Site").
+        <a href="https://www.recruizo.tech">www.recruizo.tech</a> ("Site").
       </p>
 
       <p>
@@ -128,7 +128,7 @@
       </ul>
       <p>
         To exercise these rights, please contact us at
-        <a href="mailto:contact@kiwilabs.tech">contact@kiwilabs.tech</a>.
+        <a href="mailto:contact@recruizo.tech">contact@recruizo.tech</a>.
       </p>
     </section>
 
@@ -171,8 +171,8 @@
       </p>
       <address>
         <strong>Recruizo Technologies Pvt. Ltd.</strong><br />
-        Website: <a href="https://www.kiwilabs.tech">www.kiwilabs.tech</a><br />
-        Email: <a href="mailto:contact@kiwilabs.tech">contact@kiwilabs.tech</a>
+        Website: <a href="https://www.recruizo.tech">www.recruizo.tech</a><br />
+        Email: <a href="mailto:contact@recruizo.tech">contact@recruizo.tech</a>
       </address>
     </section>
   </body>
