--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -10,7 +10,7 @@
     <p><strong>Effective Date:</strong> 01/01/2025</p>
 
     <p>
-      Welcome to <a href="https://www.kiwilabs.tech">www.kiwilabs.tech</a>,
+      Welcome to <a href="https://www.recruizo.tech">www.recruizo.tech</a>,
       owned and operated by Recruizo Technologies Pvt. Ltd. ("we," "us," or
       "our"). By accessing or using our website and services, you agree to
       comply with and be bound by the following Terms of Service ("Terms"). If
@@ -181,8 +181,8 @@
     </p>
     <address>
       Recruizo Technologies Pvt. Ltd.<br />
-      Website: <a href="https://www.kiwilabs.tech">www.kiwilabs.tech</a><br />
-      Email: <a href="mailto:contact@kiwilabs.tech">contact@kiwilabs.tech</a>
+      Website: <a href="https://www.recruizo.tech">www.recruizo.tech</a><br />
+      Email: <a href="mailto:contact@recruizo.tech">contact@recruizo.tech</a>
     </address>
   </body>
 </html>
