Update email domain from recruizo.tech to recruizo.com across HTML files

--- a/index.html
+++ b/index.html
@@ -1761,7 +1761,7 @@
                     <div class="ml-4">
                       <p class="text-gray-600">Email</p>
                       <p class="text-gray-800 font-semibold">
-                        contact@recruizo.tech
+                        contact@recruizo.com
                       </p>
                     </div>
                   </div>
