--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -10,12 +10,11 @@
     <p><strong>Effective Date:</strong> 01/01/2025</p>
 
     <p>
-      Welcome to <a href="https://www.recruizo.tech">www.recruizo.tech</a>,
-      owned and operated by Recruizo Technologies Pvt. Ltd. ("we," "us," or
-      "our"). By accessing or using our website and services, you agree to
-      comply with and be bound by the following Terms of Service ("Terms"). If
-      you do not agree with any part of these Terms, you may not use our website
-      or services.
+      Welcome to <a href="https://www.recruizo.com">www.recruizo.com</a>, owned
+      and operated by Recruizo Technologies Pvt. Ltd. ("we," "us," or "our"). By
+      accessing or using our website and services, you agree to comply with and
+      be bound by the following Terms of Service ("Terms"). If you do not agree
+      with any part of these Terms, you may not use our website or services.
     </p>
 
     <h2>1. Acceptance of Terms</h2>
@@ -181,8 +180,8 @@
     </p>
     <address>
       Recruizo Technologies Pvt. Ltd.<br />
-      Website: <a href="https://www.recruizo.tech">www.recruizo.tech</a><br />
-      Email: <a href="mailto:contact@recruizo.tech">contact@recruizo.tech</a>
+      Website: <a href="https://www.recruizo.com">www.recruizo.com</a><br />
+      Email: <a href="mailto:contact@recruizo.com">contact@recruizo.com</a>
     </address>
   </body>
 </html>
