Update branding from Recruizo to Kapidron across HTML files and update contact information

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <meta property="og:site_name" content="Recruizo AI">
-    <meta property="og:title" content=" Recruizo - Create Custom AI Models for Your Business at Unbeatable Prices">
+    <meta property="og:site_name" content="Kapidron AI">
+    <meta property="og:title" content=" Kapidron - Create Custom AI Models for Your Business at Unbeatable Prices">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Transform your business with personalized AI models and agents.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,7 +23,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.png" />
 
     <title>
-      Recruizo - Create Custom AI Models for Your Business at Unbeatable Prices
+      Kapidron - Create Custom AI Models for Your Business at Unbeatable Prices
     </title>
 
     <!-- Core CSS -->
@@ -448,7 +448,7 @@
       <nav class="container mx-auto px-6 py-4">
         <div class="flex items-center justify-between">
           <div class="flex items-center">
-            <a href="#" class="text-2xl font-bold">Recruizo</a>
+            <a href="#" class="text-2xl font-bold">Kapidron</a>
           </div>
 
           <!-- Desktop Menu -->
@@ -1580,7 +1580,7 @@
               </div>
             </div>
             <p class="text-gray-300 mb-6">
-              "Recruizo' AI solution reduced our customer service costs by 55%
+              "Kapidron' AI solution reduced our customer service costs by 55%
               while improving response times. The implementation was smooth and
               the results were immediate."
             </p>
@@ -1630,7 +1630,7 @@
               </div>
             </div>
             <p class="text-gray-300 mb-6">
-              "The predictive analytics model from Recruizo helped us optimize
+              "The predictive analytics model from Kapidron helped us optimize
               campaigns 40% faster. The ROI has been exceptional, and the price
               point made it an easy decision."
             </p>
@@ -1680,7 +1680,7 @@
               </div>
             </div>
             <p class="text-gray-300 mb-6">
-              "We integrated Recruizo' AI model into our development workflow
+              "We integrated Kapidron' AI model into our development workflow
               and saw a 45% reduction in QA time. The customization options are
               incredible."
             </p>
@@ -1761,7 +1761,7 @@
                     <div class="ml-4">
                       <p class="text-gray-600">Email</p>
                       <p class="text-gray-800 font-semibold">
-                        contact@recruizo.com
+                        contact@kapidron.com
                       </p>
                     </div>
                   </div>
@@ -1886,7 +1886,7 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-12">
           <!-- Company Info -->
           <div class="space-y-6">
-            <h3 class="text-2xl font-bold text-white">Recruizo</h3>
+            <h3 class="text-2xl font-bold text-white">Kapidron</h3>
             <p class="text-gray-400">
               Transforming businesses with affordable AI solutions that drive
               efficiency and growth.
@@ -1995,7 +1995,7 @@
 
         <div class="border-t border-gray-800 mt-12 pt-8">
           <div class="flex flex-col md:flex-row justify-between items-center">
-            <p class="text-sm">© 2025 Recruizo. All rights reserved.</p>
+            <p class="text-sm">© 2025 Kapidron. All rights reserved.</p>
             <div class="flex space-x-6 mt-4 md:mt-0">
               <a
                 href="/privacy-policy.html"
