--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,11 +13,11 @@
 
     <section>
       <p>
-        Recruizo Technologies Pvt. Ltd. ("we," "us," or "our") values your
+        Kapidron Technologies Pvt. Ltd. ("we," "us," or "our") values your
         privacy and is committed to protecting the personal information you
         share with us. This Privacy Policy outlines how we collect, use, and
         protect your personal data when you visit our website
-        <a href="https://www.recruizo.com">www.recruizo.com</a> ("Site").
+        <a href="https://www.kapidron.com">www.kapidron.com</a> ("Site").
       </p>
 
       <p>
@@ -128,7 +128,7 @@
       </ul>
       <p>
         To exercise these rights, please contact us at
-        <a href="mailto:contact@recruizo.com">contact@recruizo.com</a>.
+        <a href="mailto:contact@kapidron.com">contact@kapidron.com</a>.
       </p>
     </section>
 
@@ -170,9 +170,9 @@
         practices, please contact us at:
       </p>
       <address>
-        <strong>Recruizo Technologies Pvt. Ltd.</strong><br />
-        Website: <a href="https://www.recruizo.com">www.recruizo.com</a><br />
-        Email: <a href="mailto:contact@recruizo.com">contact@recruizo.com</a>
+        <strong>Kapidron Technologies Pvt. Ltd.</strong><br />
+        Website: <a href="https://www.kapidron.com">www.kapidron.com</a><br />
+        Email: <a href="mailto:contact@kapidron.com">contact@kapidron.com</a>
       </address>
     </section>
   </body>
