--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -10,8 +10,8 @@
     <p><strong>Effective Date:</strong> 01/01/2025</p>
 
     <p>
-      Welcome to <a href="https://www.recruizo.com">www.recruizo.com</a>, owned
-      and operated by Recruizo Technologies Pvt. Ltd. ("we," "us," or "our"). By
+      Welcome to <a href="https://www.kapidron.com">www.kapidron.com</a>, owned
+      and operated by Kapidron Technologies Pvt. Ltd. ("we," "us," or "our"). By
       accessing or using our website and services, you agree to comply with and
       be bound by the following Terms of Service ("Terms"). If you do not agree
       with any part of these Terms, you may not use our website or services.
@@ -75,7 +75,7 @@
     <h2>5. Intellectual Property</h2>
     <p>
       The content, design, logos, graphics, trademarks, and other materials on
-      the Site are the property of Recruizo Technologies Pvt. Ltd. and are
+      the Site are the property of Kapidron Technologies Pvt. Ltd. and are
       protected by copyright, trademark, and other intellectual property laws.
       You may not use, copy, modify, or distribute any content from the Site
       without our express written consent.
@@ -144,7 +144,7 @@
 
     <h2>11. Limitation of Liability</h2>
     <p>
-      To the fullest extent permitted by law, Recruizo Technologies Pvt. Ltd.
+      To the fullest extent permitted by law, Kapidron Technologies Pvt. Ltd.
       shall not be liable for any indirect, incidental, special, consequential,
       or punitive damages arising out of or related to your use of the Site or
       services, even if we have been advised of the possibility of such damages.
@@ -158,7 +158,7 @@
 
     <h2>12. Indemnification</h2>
     <p>
-      You agree to indemnify and hold harmless Recruizo Technologies Pvt. Ltd.,
+      You agree to indemnify and hold harmless Kapidron Technologies Pvt. Ltd.,
       its officers, employees, agents, and affiliates, from and against any
       claims, liabilities, damages, losses, and expenses, including legal fees,
       arising out of or in connection with your use of the Site or violation of
@@ -179,9 +179,9 @@
       at:
     </p>
     <address>
-      Recruizo Technologies Pvt. Ltd.<br />
-      Website: <a href="https://www.recruizo.com">www.recruizo.com</a><br />
-      Email: <a href="mailto:contact@recruizo.com">contact@recruizo.com</a>
+      Kapidron Technologies Pvt. Ltd.<br />
+      Website: <a href="https://www.kapidron.com">www.kapidron.com</a><br />
+      Email: <a href="mailto:contact@kapidron.com">contact@kapidron.com</a>
     </address>
   </body>
 </html>
