--- a/index.html
+++ b/index.html
@@ -1766,7 +1766,7 @@
                     </div>
                   </div>
 
-                  <div class="flex items-center">
+                  <!-- <div class="flex items-center">
                     <div
                       class="w-12 h-12 bg-purple-500 rounded-lg flex items-center justify-center"
                     >
@@ -1796,7 +1796,7 @@
                         San Francisco, CA
                       </p>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
