feat: update branding in iain_allen and kris index.html; add images and enhance text for clarity

--- a/preview/iain_allen/index.html
+++ b/preview/iain_allen/index.html
@@ -242,7 +242,9 @@
         <div class="absolute inset-0 bg-gradient-to-b from-neutral-900/70 to-neutral-900 z-10" id="el-pkun1dg5"></div>
         
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-20 py-20" id="el-9bs88eng" style="justify-content: center; text-align: center; align-items: center;">
-            <div class="text-center md:text-left" id="el-lvc8rfex">
+            <div class="flex flex-row items-center justify-between flex-wrap gap-y-5">
+
+                <div class="text-center md:text-left" id="el-lvc8rfex">
                 <h1 class="text-4xl md:text-6xl font-bold text-white mb-6 animate__animated animate__fadeInUp" id="el-hj1u5k7u">
                     Elite Coaching for Strength, Performance, and Confidence
                 </h1>
@@ -254,6 +256,10 @@
                 <button class="bg-[#2C7AFF] text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-[#2C7AFF]/90 transition-colors animate__animated animate__fadeInUp animate__delay-2s" id="el-vqxx4ahn">
                     Start Your Journey Today
                 </button>
+                </div>
+
+                <img src="/preview/iain_allen/pp.png" alt="Iain Allen"  />
+
             </div>
         </div>
     </section>
