refactor: update font family in kris index.html for improved typography

--- a/preview/kris/index.html
+++ b/preview/kris/index.html
@@ -178,7 +178,7 @@
       <link rel="icon" type="image/x-icon" href="{{settings.favicon}}">
       
    </head>
-   <body class="antialiased text-gray-800 min-h-screen flex flex-col">
+   <body class="antialiased text-gray-800 min-h-screen flex flex-col font-[Inter]">
       <!-- Skip to main content link for accessibility -->
       <a href="#main-content" 
          class="sr-only focus:not-sr-only focus:absolute focus:top-0 focus:left-0 focus:z-50 focus:p-4 focus:bg-white focus:text-black">
