feat: replace placeholder text with image in kris index.html for enhanced visual presentation

--- a/preview/kris/index.html
+++ b/preview/kris/index.html
@@ -310,9 +310,7 @@
                     </div>
                 </div>
                 <div class="relative h-[500px] bg-neutral-200 rounded-lg overflow-hidden animate__animated animate__fadeInRight">
-                    <div class="absolute inset-0 flex items-center justify-center">
-                        <span class="text-neutral-600">Kris Law's Photo</span>
-                    </div>
+                    <img src="/preview/kris/pp.png" class="object-cover object-center h-full w-full" alt="Kris Law">
                 </div>
             </div>
         </div>
