--- a/preview/alex_nelson/index.html
+++ b/preview/alex_nelson/index.html
@@ -305,7 +305,7 @@
         </h1>
         
         <p class="text-lg md:text-xl text-gray-300 mb-8 animate__animated animate__fadeInUp animate__delay-1s">
-          Stop guessing, start progressing. Rehab your tendons the right way and get back to the activities you love.
+          Stop guessing, rogressing. Rehab your tendons the right way and get back to the activities you love.
         </p>
         
         <div class="animate__animated animate__fadeInUp animate__delay-2s">
