--- a/preview/gosolarmart/index.html
+++ b/preview/gosolarmart/index.html
@@ -340,7 +340,7 @@
           </p>
           <div class="flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
             <a href="#" class="inline-block px-8 py-4 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition-colors duration-300 shadow-lg hover:shadow-xl">
-              Start Shopping Now
+              Start Shopping No
             </a>
             <a href="#" class="inline-block px-8 py-4 border-2 border-green-600 text-green-600 font-semibold rounded-lg hover:bg-green-600 hover:text-white transition-all duration-300">
               Talk with Our Expert
