--- a/preview/gosolarmart/index.html
+++ b/preview/gosolarmart/index.html
@@ -213,15 +213,9 @@
       <link rel="icon" type="image/x-icon" href="{{settings.favicon}}">
       
       <style>
-        h1, h2, h3, h4, h5, h6 {
-          font-family: {{settings.fonts.primary}}, system-ui, sans-serif;
-        }
-        body {
-          font-family: {{settings.fonts.secondary}}, system-ui, sans-serif;
-        }
       </style>
    </head>
-   <body class="antialiased text-gray-800 min-h-screen flex flex-col">
+   <body class="antialiased text-gray-800 min-h-screen flex flex-col font-[Inter]">
       <!-- Skip to main content link for accessibility -->
       <a href="#main-content" 
          class="sr-only focus:not-sr-only focus:absolute focus:top-0 focus:left-0 focus:z-50 focus:p-4 focus:bg-white focus:text-black">
