--- a/preview/gosolarmart/index.html
+++ b/preview/gosolarmart/index.html
@@ -42,7 +42,7 @@
 
        <!-- Performance optimization: Preload critical resources -->
       <link rel="preload" href="https://cdn.tailwindcss.com" as="script">
-      <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" as="style">
+      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
       <!-- Core CSS -->
       <script src="https://cdn.tailwindcss.com"></script>
@@ -337,7 +337,7 @@
           </p>
           <div class="flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
             <a href="#" class="inline-block px-8 py-4 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition-colors duration-300 shadow-lg hover:shadow-xl">
-              Start Shopping No
+              Start Shopping Now
             </a>
             <a href="#" class="inline-block px-8 py-4 border-2 border-green-600 text-green-600 font-semibold rounded-lg hover:bg-green-600 hover:text-white transition-all duration-300">
               Talk with Our Expert
