--- a/preview/gosolarmart/index.html
+++ b/preview/gosolarmart/index.html
@@ -287,67 +287,63 @@
           <a href="#" class="text-gray-700 hover:text-green-600 transition-colors">Contact</a>
         </nav>
 
-        <!-- Header Section with Background Image and Centered Content -->
-<header class="bg-cover bg-center" style="background-image: url('path/to/your-image.jpg');">
-  <div class="container mx-auto px-4 py-8">
-    <div class="flex justify-center items-center">
-      <div class="flex items-center space-x-4">
-        <button class="p-2 hover:text-green-600 transition-colors">
-          <i class="fa-solid fa-search"></i>
-        </button>
-        <button class="p-2 hover:text-green-600 transition-colors relative">
-          <i class="fa-solid fa-shopping-cart"></i>
-          <span class="absolute -top-1 -right-1 bg-green-600 text-white text-xs rounded-full w-4 h-4 flex items-center justify-center">0</span>
-        </button>
-        <button class="p-2 hover:text-green-600 transition-colors">
-          <i class="fa-solid fa-user"></i>
-        </button>
-        <!-- Mobile Menu Button -->
-        <button class="md:hidden p-2 hover:text-green-600 transition-colors">
-          <i class="fa-solid fa-bars"></i>
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Mobile Navigation -->
-  <nav class="md:hidden hidden bg-white border-t">
-    <div class="container mx-auto px-4 py-2">
-      <div class="flex flex-col space-y-2">
-        <a href="#" class="py-2 text-gray-700 hover:text-green-600 transition-colors">Home</a>
-        <a href="#" class="py-2 text-gray-700 hover:text-green-600 transition-colors">Products</a>
-        <a href="#" class="py-2 text-gray-700 hover:text-green-600 transition-colors">Solutions</a>
-        <a href="#" class="py-2 text-gray-700 hover:text-green-600 transition-colors">About</a>
-        <a href="#" class="py-2 text-gray-700 hover:text-green-600 transition-colors">Contact</a>
-      </div>
-    </div>
-  </nav>
-</header>
-
-<!-- Hero Section with Centered Text and Background Gradient -->
-<section id="hero" class="pt-32 pb-16 md:pt-40 md:pb-24 bg-gradient-to-br from-green-50 to-blue-50">
-  <div class="container mx-auto px-4">
-    <div class="grid md:grid-cols-2 gap-8 items-center">
-      <div class="text-center md:text-left space-y-6">
-        <h1 class="text-3xl md:text-5xl font-bold text-gray-800 leading-tight">
-          Great Value, Unbeatable Prices - Solar Energy Solutions for Homes & Businesses
-        </h1>
-        <p class="text-gray-600 text-lg md:text-xl">
-          Transform your energy future with sustainable, cost-effective solar solutions tailored for African homes and businesses.
-        </p>
-        <div class="flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
-          <a href="#" class="inline-block px-8 py-4 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition-colors duration-300 shadow-lg hover:shadow-xl">
-            Start Shopping Now
-          </a>
-          <a href="#" class="inline-block px-8 py-4 border-2 border-green-600 text-green-600 font-semibold rounded-lg hover:bg-green-600 hover:text-white transition-all duration-300">
-            Talk with Our Expert
-          </a>
+        <!-- Header Actions -->
+        <div class="flex items-center space-x-4">
+          <button class="p-2 hover:text-green-600 transition-colors">
+            <i class="fa-solid fa-search"></i>
+          </button>
+          <button class="p-2 hover:text-green-600 transition-colors relative">
+            <i class="fa-solid fa-shopping-cart"></i>
+            <span class="absolute -top-1 -right-1 bg-green-600 text-white text-xs rounded-full w-4 h-4 flex items-center justify-center">0</span>
+          </button>
+          <button class="p-2 hover:text-green-600 transition-colors">
+            <i class="fa-solid fa-user"></i>
+          </button>
+          <!-- Mobile Menu Button -->
+          <button class="md:hidden p-2 hover:text-green-600 transition-colors">
+            <i class="fa-solid fa-bars"></i>
+          </button>
         </div>
       </div>
     </div>
-  </div>
-</section>
 
+    <!-- Mobile Navigation -->
+    <nav class="md:hidden hidden bg-white border-t">
+      <div class="container mx-auto px-4 py-2">
+        <div class="flex flex-col space-y-2">
+          <a href="#" class="py-2 text-gray-700 hover:text-green-600 transition-colors">Home</a>
+          <a href="#" class="py-2 text-gray-700 hover:text-green-600 transition-colors">Products</a>
+          <a href="#" class="py-2 text-gray-700 hover:text-green-600 transition-colors">Solutions</a>
+          <a href="#" class="py-2 text-gray-700 hover:text-green-600 transition-colors">About</a>
+          <a href="#" class="py-2 text-gray-700 hover:text-green-600 transition-colors">Contact</a>
+        </div>
+      </div>
+    </nav>
+  </header>
+</div>
+</element><element id="12b79e31-dadd-40cd-bf79-3c73cd3b0117" data-section-id="12b79e31-dadd-40cd-bf79-3c73cd3b0117">
+
+
+<div id="root">
+  <section id="hero" class="pt-32 pb-16 md:pt-40 md:pb-24 bg-gradient-to-br from-green-50 to-blue-50">
+    <div class="container mx-auto px-4">
+      <div class="grid md:grid-cols-2 gap-8 items-center">
+        <div class="text-center md:text-left space-y-6">
+          <h1 class="text-3xl md:text-5xl font-bold text-gray-800 leading-tight">
+            Great Value, Unbeatable Prices - Solar Energy Solutions for Homes & Businesses
+          </h1>
+          <p class="text-gray-600 text-lg md:text-xl">
+            Transform your energy future with sustainable, cost-effective solar solutions tailored for African homes and businesses.
+          </p>
+          <div class="flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
+            <a href="#" class="inline-block px-8 py-4 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition-colors duration-300 shadow-lg hover:shadow-xl">
+              Start Shopping Now
+            </a>
+            <a href="#" class="inline-block px-8 py-4 border-2 border-green-600 text-green-600 font-semibold rounded-lg hover:bg-green-600 hover:text-white transition-all duration-300">
+              Talk with Our Expert
+            </a>
+          </div>
+        </div>
         <div class="relative h-64 md:h-96 rounded-xl overflow-hidden shadow-2xl">
           <div class="absolute inset-0 bg-gradient-to-r from-green-600/20 to-blue-600/20"></div>
           <div class="absolute inset-0 bg-gray-900/50"></div>
