--- a/preview/AI_marketresearch/index.html
+++ b/preview/AI_marketresearch/index.html
@@ -212,12 +212,14 @@
       <link rel="icon" type="image/x-icon" href="{{settings.favicon}}">
       
       <style>
-        h1, h2, h3, h4, h5, h6 {
-          font-family: {{settings.fonts.primary}}, Inter, system-ui, sans-serif;
-        }
-        body {
-          font-family: {{settings.fonts.secondary}}, Inter, system-ui, sans-serif;
-        }
+       h1, h2, h3, h4, h5, h6 {
+  font-family: 'Inter', {{settings.fonts.primary}}, system-ui, sans-serif;
+}
+
+body {
+  font-family: 'Inter', {{settings.fonts.secondary}}, system-ui, sans-serif;
+}
+
       </style>
    </head>
    <body class="antialiased text-gray-800 min-h-screen flex flex-col">
