--- a/preview/solar_calculator/index.html
+++ b/preview/solar_calculator/index.html
@@ -219,6 +219,11 @@
           font-family: {{settings.fonts.secondary}}, Inter, system-ui, sans-serif;
         }
       </style>
+      <script>
+        function scrollToCalculator() {
+            document.getElementById("solar-savings-calculator").scrollIntoView({ behavior: "smooth" });
+        }
+      </script>
    </head>
    <body class="antialiased text-gray-800 min-h-screen flex flex-col">
       <!-- Skip to main content link for accessibility -->
