--- a/preview/solar_calculator/index.html
+++ b/preview/solar_calculator/index.html
@@ -219,11 +219,7 @@
           font-family: {{settings.fonts.secondary}}, Inter, system-ui, sans-serif;
         }
       </style>
-      <script>
-        function scrollToCalculator() {
-            document.getElementById("solar-savings-calculator").scrollIntoView({ behavior: "smooth" });
-        }
-      </script>
+    
    </head>
    <body class="antialiased text-gray-800 min-h-screen flex flex-col">
       <!-- Skip to main content link for accessibility -->
@@ -413,5 +409,13 @@
       document.getElementById('calculationResults').classList.add('animate__fadeInRight');
     });
   </script>
+  <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            document.querySelector("a[href='#solarCalculator']").addEventListener("click", function (e) {
+                e.preventDefault(); // Prevent default anchor behavior
+                document.getElementById("solarCalculator").scrollIntoView({ behavior: "smooth" });
+            });
+        });
+    </script>
 </div>
 </element><element id="a7e7e869-5bd9-4c14-be75-b5296ce49827" data-section-id="a7e7e869-5bd9-4c14-be75-b5296ce49827">
