--- a/preview/keegan_james/index.html
+++ b/preview/keegan_james/index.html
@@ -154,11 +154,11 @@
   <section id="hero" class="relative h-screen bg-neutral-900 flex items-center justify-center overflow-hidden">
     <div class="absolute inset-0 bg-gradient-to-b from-neutral-900/70 to-neutral-900/90 z-10"></div>
     
-    <!-- Background Pattern -->
+    <!-- Background Image -->
     <div class="absolute inset-0 opacity-10">
-      <div class="absolute inset-0" style="background-image: url('data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.4'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E');"></div>
+    <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('/preview/keegan_james/pp.png');"></div>
     </div>
-
+  
     <div class="container mx-auto px-6 relative z-20 pt-10">
       <div class="max-w-4xl mx-auto text-center">
         <h1 class="text-4xl md:text-6xl font-bold text-white mb-6 animate__animated animate__fadeInDown">
