--- a/preview/keegan_james/index.html
+++ b/preview/keegan_james/index.html
@@ -55,6 +55,12 @@
         body {
           font-family: 'Inter', sans-serif;
         }
+        div {
+        width: 100%;
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+        }
       </style>
    </head>
    <body class="antialiased text-gray-800 min-h-screen flex flex-col">
